--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,15 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/api/app/main.py" }]
+    "devCommand": "uvicorn api.app.main:app --reload --host 0.0.0.0 --port 8001",
+    "builds": [
+        {
+            "src": "api/app/main.py",
+            "use": "@vercel/python"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "api/app/main.py"
+        }
+    ]
 }
